# dunenoise

./: CMakeLists.txt  README.md  build  setup.sh
Fcl/: CMakeLists.txt  addNsfThreshKePlotter.fcl  addPedmetKeNotSignalRmsSum.fcl  dunenoise_tools.fcl
Fcl/Iceberg/: CMakeLists.txt  addDftEventPlots.fcl  addIbNsfMetricPlots.fcl  addIcebergPedmetKeNotSignalRmsSum.fcl  ib3cnrNoiseVsChan.fcl  ib3taiNoiseVsChan.fcl  ib4cnrNoiseVsChan.fcl  ib4taiNoiseVsChan.fcl  ibWirePlot.fcl  ibcnrNoiseDft.fcl  ibcnrNoiseVsChan.fcl  ibsetDftFmax100.fcl  ibsetDftFmax200.fcl  (+4 more)
Fclold/: addDftPlots.fcl  addDftPlotsOld.fcl  addNoiseMetrics.fcl  addNoiseSignalFinder.fcl  addNoiseSlicer.fcl  addNoiseSplit1000.fcl  addNoiseSumMetrics.fcl  addRoiSlicer.fcl  chmet_template_tpp.fcl  cnrSignalPlots.fcl  pedmetKeNotSignalCniRmsSum.fcl  run_dataprep_adc.fcl  run_dataprep_cnr.fcl  run_dataprep_tai.fcl  taiSignalPlots.fcl
Root/: CMakeLists.txt  drawNoiseHisto.C  drawNoiseVsTime.C  ibDrawWireNoise.C  ibMergeDftPlots.C  ibPlotWires.C  pdMergeDftPlots.C
Script/: CMakeLists.txt  drawNoise  drawNoiseVsTime  dunenoiseHelp  ibMergeDftPlots  mergeDftPlanes  setup.sh.in
Tool/: ApaWirePlot.h  ApaWirePlot_tool.cc  CMakeLists.txt
doc/: iceberg.md  protodune.md  setupPlots.sh
fcl/: addNoiseMetrics.fcl  addNoiseSplit1000.fcl  addRoiSlicer.fcl  cnrNoisePlots.fcl  dftPlotApasByView.fcl  noiseMetrics.fcl  noiseSignalFinder.fcl  pedmetKeNotSignalCniRmsSum.fcl  run_dataprep_adc.fcl  run_dataprep_cnr.fcl  run_dataprep_tai.fcl  taiNoisePlots.fcl  useNoiseSignalFinder.fcl
root/: drawNoiseHisto.C  mergeDftPlanes.C
(+4 files in other folders)
